...
                            <constraint firstItem="6ed-r1-0oF" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="0Mi-2N-ETA"/>
                            <constraint firstItem="6ed-r1-0oF" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" id="4ST-eF-pLN"/>
                            <constraint firstItem="6ed-r1-0oF" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="njn-Nw-5bR"/>
                            <constraint firstItem="6ed-r1-0oF" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="s1d-ng-gC9"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Todo List" id="RWi-i1-dRp">
                        <barButtonItem key="rightBarButtonItem" title="+" id="i5d-z5-csm">
                            <connections>
                                <segue destination="hHo-63-Jpa" kind="show" identifier="addTodo" id="jFi-nx-Fxk"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LqJ-hi-KDb">
                                <rect key="frame" x="159.5" y="537" width="56" height="41"/>
                                <accessibility key="accessibilityConfiguration" identifier="doneButton"/>
                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                <state key="normal" title="Done"/>
                                <connections>
                                    <action selector="tapDone:" destination="hHo-63-Jpa" eventType="touchUpInside" id="IDj-os-DEs"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
