...
  
  override func viewDidLoad() {
    super.viewDidLoad()
    doneButton.accessibilityIdentifier = AccessibilityIdentifier.doneButton
    
    if let todo = todo {
      self.title = "Edit Todo"
      if todo.image == "child-selected"{
        childButton.isSelected = true
      }
      else if todo.image == "phone-selected"{
        phoneButton.isSelected = true
      }
...
